[tool.poetry]
name = "HAMPpred"
version = "0.0.1"
authors = [
    "Stanisław Dunin-Horkawicz <s.dunin-horkawicz@cent.uw.edu.pl>",
    "Aleksander Wiński <a.winski@cent.uw.edu.pl>"
]
description = "HAMPpred package a tool for Crick angle prediction in HAMP domains"
readme = "README.md"
license = "LICENSE.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = [
    { include = "hamp_pred" },
    { include = "data" },
]

[tool.poetry.scripts]
hamp_pred = 'hamp_pred.scripts.predict:run'
hamp_train = 'hamp_pred.scripts.train:run'

[project.urls]
"Homepage" = "https://github.com/labstructbioinf/HAMPpred"
"Bug Tracker" = "https://github.com/labstructbioinf/HAMPpred/issues"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "1.22.3"
pandas = "1.4.2"
keras = "2.8.0"
paramiko = "2.10.3"
tensorflow = "2.8.0"
Bio = "1.3.6"
seaborn = "0.11.2"
scikit-learn = "1.0.2"
protobuf = "3.20.0"

[tool.poetry.group.server.dependencies]
flask-restx = "0.5.1"
flask = "2.1.3"
werkzeug = "2.1.2"
gunicorn = "20.1.0"
celery = "5.2.7"
Redis = "4.3.0"